rollout/players/templates/players-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: players-dr
spec:
  host: players
  subsets:
    - name: v1
      labels:
        version: v1
